# rscoder

./: Adder.h  CMakeLists.txt  Cell.h  Counter.h  Decimation.h  Decoder.h  Encoder.h  Epsilon.h  README.md  gf.hpp  poly.hpp  rs.hpp
